# Laboratory-of-Photogrammetry

./: .gitmodules  COPYRIGHT.md  LICENSE.md  README.md
openMVG_Rig/: CHANGELOG.md  CMakeLists.txt
openMVG_Rig/cmakeFindModules/: FindSphinx.cmake
openMVG_Rig/docs/latex/non-central/: biblio.bib  non-central.tex
openMVG_Rig/docs/sphinx/rst/: bibliography.rst  conf.py  index.rst
openMVG_Rig/docs/sphinx/rst/software/: SfMInit_ImageListing.rst
openMVG_Rig/lib/: CMakeLists.txt
openMVG_Rig/lib/stlplus3/: CMakeLists.txt
openMVG_Rig/openMVGRig_create_list/: CMakeLists.txt  json.hpp  list.cpp  list_utils.cpp  list_utils.hpp  tools.cpp  types.cpp  types.hpp
openMVG_Rig/src/: CMakeLists.txt
openMVG_Rig/src/ComputeMatches/: CMakeLists.txt  main.cpp
openMVG_Rig/src/Export/: CMakeLists.txt  main_openMVG2DAV.cpp
openMVG_Rig/src/ExportMatches/: CMakeLists.txt  main_ExportMatches.cpp
openMVG_Rig/src/GlobalSfM/: CMakeLists.txt  ac_ransac_rig.hpp  main_GlobalSfM.cpp  main_createPairListMatchFile.cpp  relative_translation_test.cpp  sfm_engine_rigid_rig.cpp  sfm_engine_rigid_rig.hpp  sfm_engine_translation_averaging.cpp  sfm_engine_translation_averaging.hpp  sfm_robust_relative_pose_rig.cpp  sfm_robust_relative_pose_rig.hpp  solver_non_central_kernel_test.cpp  test_data_sets.cpp  test_data_sets.hpp  triplet_t_ACRansac_kernelAdaptator.hpp  triplet_t_solver_rig.hpp
openMVG_Rig/src/SfMInit_ImageListing/: CMakeLists.txt  json.hpp  list_utils.cpp  list_utils.hpp  main.cpp  tools.hpp  types.cpp  types.hpp
openMVG_Rig/src/openMVGRig_create_list/: CMakeLists.txt  list.cpp  list_utils.cpp  tools.cpp  tools.hpp
